vendor/num_enum/tests/try_build/compile_fail/unpexpected_alternatives.rs
#[derive(num_enum::UnsafeFromPrimitive)]
#[repr(u8)]
enum Numbers {
    Zero,
    #[num_enum(alternatives = [2])]
    One,
}

fn main() {

}
