vendor/num_enum/tests/try_build/compile_fail/unpexpected_alternatives.stderr
error: #[derive(UnsafeFromPrimitive)] does not support `#[num_enum(alternatives = [..])]`
 --> $DIR/unpexpected_alternatives.rs:5:16
  |
5 |     #[num_enum(alternatives = [2])]
  |                ^^^^^^^^^^^^
